// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button snapshot 1`] = `
.c1 {
  line-height: 1.2;
  font-size: 2rem;
  text-transform: uppercase;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--white);
}

.c0 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  background-color: var(--red);
  box-shadow: 0 4px 0 0 var(--red-dark);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
}

.c0:hover {
  cursor: pointer;
}

.c0:hover {
  background-color: var(--red-light);
}

.c0:active {
  box-shadow: 0 2px 0 0 var(--red-dark);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

@media (min-width:600px) {

}

<div>
  <button
    class="c0"
    type="submit"
  >
    <span
      class="c1"
    >
      test
    </span>
  </button>
</div>
`;

exports[`button snapshot 2`] = `
<div>
  <button
    class="LinkButton__ButtonWrapper-sc-4kilkf-1 fYGPSY"
    type="button"
  >
    <span
      class="Title-xde5hf-0 inVoLY"
    >
      test
    </span>
  </button>
</div>
`;

exports[`button snapshot 3`] = `
<div>
  <button
    class="LinkButton__ButtonWrapper-sc-4kilkf-1 kLFqTc"
    type="button"
  >
    .c1 {
  position: absolute;
  top: 0px;
  bottom: 0px;
  right: 0px;
  background: var(--red-dark);
  -webkit-transform-origin: 100% 0%;
  -ms-transform-origin: 100% 0%;
  transform-origin: 100% 0%;
  width: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem);
  -ms-transform: translate(.3rem,.3rem);
  transform: translate(.3rem,.3rem);
}

.c2:active .c0 {
  -webkit-transform: translate(0rem,0rem) scaleX(0);
  -ms-transform: translate(0rem,0rem) scaleX(0);
  transform: translate(0rem,0rem) scaleX(0);
}

.LinkButton__LinkWrapper-sc-4kilkf-0:active .c0 {
  -webkit-transform: translate(0rem,0rem) scaleX(0);
  -ms-transform: translate(0rem,0rem) scaleX(0);
  transform: translate(0rem,0rem) scaleX(0);
}

@media (min-width:600px) {

}

<span
      class="c0 c1"
    />
    .c1 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 0px;
  height: 0px;
  border-left: .3rem solid transparent;
  border-right: .3rem solid transparent;
  border-top: .3rem solid var(--red-dark);
  -webkit-transform-origin: center bottom;
  -ms-transform-origin: center bottom;
  transform-origin: center bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(0rem,.3rem) scale(1);
  -ms-transform: translate(0rem,.3rem) scale(1);
  transform: translate(0rem,.3rem) scale(1);
}

.c2:active .c0 {
  -webkit-transform: translate(-.3rem,0rem) scale(0);
  -ms-transform: translate(-.3rem,0rem) scale(0);
  transform: translate(-.3rem,0rem) scale(0);
}

.LinkButton__LinkWrapper-sc-4kilkf-0:active .c0 {
  -webkit-transform: translate(-.3rem,0rem) scale(0);
  -ms-transform: translate(-.3rem,0rem) scale(0);
  transform: translate(-.3rem,0rem) scale(0);
}

@media (min-width:600px) {

}

<span
      class="c0 c1"
    />
    .c1 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: var(--red-dark);
  -webkit-transform-origin: 0px 100%;
  -ms-transform-origin: 0px 100%;
  transform-origin: 0px 100%;
  height: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem) scaleY(1);
  -ms-transform: translate(.3rem,.3rem) scaleY(1);
  transform: translate(.3rem,.3rem) scaleY(1);
}

.c2:active .c0 {
  -webkit-transform: translate(0rem,0rem) scaleY(0);
  -ms-transform: translate(0rem,0rem) scaleY(0);
  transform: translate(0rem,0rem) scaleY(0);
}

.LinkButton__LinkWrapper-sc-4kilkf-0:active .c0 {
  -webkit-transform: translate(0rem,0rem) scaleY(0);
  -ms-transform: translate(0rem,0rem) scaleY(0);
  transform: translate(0rem,0rem) scaleY(0);
}

@media (min-width:600px) {

}

<span
      class="c0 c1"
    />
    .c1 {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 0px;
  height: 0px;
  border-left: 0rem solid transparent;
  border-right: .3rem solid transparent;
  border-bottom: .3rem solid var(--red-dark);
  -webkit-transform-origin: right bottom;
  -ms-transform-origin: right bottom;
  transform-origin: right bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,0rem) scale(1);
  -ms-transform: translate(.3rem,0rem) scale(1);
  transform: translate(.3rem,0rem) scale(1);
}

.c2:active .c0 {
  -webkit-transform: translate(0rem,-.3rem) scale(0);
  -ms-transform: translate(0rem,-.3rem) scale(0);
  transform: translate(0rem,-.3rem) scale(0);
}

.LinkButton__LinkWrapper-sc-4kilkf-0:active .c0 {
  -webkit-transform: translateY(-.3rem) scale(0);
  -ms-transform: translateY(-.3rem) scale(0);
  transform: translateY(-.3rem) scale(0);
}

@media (min-width:600px) {

}

<span
      class="c0 c1"
    />
    <span
      class="Title-xde5hf-0 inVoLY"
    >
      test
    </span>
  </button>
</div>
`;

exports[`link snapshot 1`] = `
.c1 {
  line-height: 1.2;
  font-size: 2rem;
  text-transform: uppercase;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--white);
}

.c0 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  background-color: var(--red);
  box-shadow: 0 4px 0 0 var(--red-dark);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
}

.c0:hover {
  cursor: pointer;
}

.c0:hover {
  background-color: var(--red-light);
}

.c0:active {
  box-shadow: 0 2px 0 0 var(--red-dark);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

@media (min-width:600px) {

}

<div>
  <a
    class="c0"
    href="/#"
  >
    <span
      class="c1"
    >
      test
    </span>
  </a>
</div>
`;

exports[`link snapshot 2`] = `
<div>
  <a
    class="LinkButton__LinkWrapper-sc-4kilkf-0 jcXFIz"
    href="/#test2"
  >
    .c1 {
  position: absolute;
  top: 0px;
  bottom: 0px;
  right: 0px;
  background: var(--red-dark);
  -webkit-transform-origin: 100% 0%;
  -ms-transform-origin: 100% 0%;
  transform-origin: 100% 0%;
  width: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem);
  -ms-transform: translate(.3rem,.3rem);
  transform: translate(.3rem,.3rem);
}

.LinkButton__ButtonWrapper-sc-4kilkf-1:active .c0 {
  -webkit-transform: translate(0rem,0rem) scaleX(0);
  -ms-transform: translate(0rem,0rem) scaleX(0);
  transform: translate(0rem,0rem) scaleX(0);
}

.c2:active .c0 {
  -webkit-transform: translate(0rem,0rem) scaleX(0);
  -ms-transform: translate(0rem,0rem) scaleX(0);
  transform: translate(0rem,0rem) scaleX(0);
}

@media (min-width:600px) {

}

<span
      class="c0 c1"
    />
    .c1 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 0px;
  height: 0px;
  border-left: .3rem solid transparent;
  border-right: .3rem solid transparent;
  border-top: .3rem solid var(--red-dark);
  -webkit-transform-origin: center bottom;
  -ms-transform-origin: center bottom;
  transform-origin: center bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(0rem,.3rem) scale(1);
  -ms-transform: translate(0rem,.3rem) scale(1);
  transform: translate(0rem,.3rem) scale(1);
}

.LinkButton__ButtonWrapper-sc-4kilkf-1:active .c0 {
  -webkit-transform: translate(-.3rem,0rem) scale(0);
  -ms-transform: translate(-.3rem,0rem) scale(0);
  transform: translate(-.3rem,0rem) scale(0);
}

.c2:active .c0 {
  -webkit-transform: translate(-.3rem,0rem) scale(0);
  -ms-transform: translate(-.3rem,0rem) scale(0);
  transform: translate(-.3rem,0rem) scale(0);
}

@media (min-width:600px) {

}

<span
      class="c0 c1"
    />
    .c1 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: var(--red-dark);
  -webkit-transform-origin: 0px 100%;
  -ms-transform-origin: 0px 100%;
  transform-origin: 0px 100%;
  height: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem) scaleY(1);
  -ms-transform: translate(.3rem,.3rem) scaleY(1);
  transform: translate(.3rem,.3rem) scaleY(1);
}

.LinkButton__ButtonWrapper-sc-4kilkf-1:active .c0 {
  -webkit-transform: translate(0rem,0rem) scaleY(0);
  -ms-transform: translate(0rem,0rem) scaleY(0);
  transform: translate(0rem,0rem) scaleY(0);
}

.c2:active .c0 {
  -webkit-transform: translate(0rem,0rem) scaleY(0);
  -ms-transform: translate(0rem,0rem) scaleY(0);
  transform: translate(0rem,0rem) scaleY(0);
}

@media (min-width:600px) {

}

<span
      class="c0 c1"
    />
    .c1 {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 0px;
  height: 0px;
  border-left: 0rem solid transparent;
  border-right: .3rem solid transparent;
  border-bottom: .3rem solid var(--red-dark);
  -webkit-transform-origin: right bottom;
  -ms-transform-origin: right bottom;
  transform-origin: right bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,0rem) scale(1);
  -ms-transform: translate(.3rem,0rem) scale(1);
  transform: translate(.3rem,0rem) scale(1);
}

.LinkButton__ButtonWrapper-sc-4kilkf-1:active .c0 {
  -webkit-transform: translate(0rem,-.3rem) scale(0);
  -ms-transform: translate(0rem,-.3rem) scale(0);
  transform: translate(0rem,-.3rem) scale(0);
}

.c2:active .c0 {
  -webkit-transform: translateY(-.3rem) scale(0);
  -ms-transform: translateY(-.3rem) scale(0);
  transform: translateY(-.3rem) scale(0);
}

@media (min-width:600px) {

}

<span
      class="c0 c1"
    />
    <span
      class="Title-xde5hf-0 inVoLY"
    >
      test 2
    </span>
  </a>
</div>
`;

exports[`secondary button and link snapshot 1`] = `
.c2 {
  line-height: 1.2;
  font-size: 2rem;
  text-transform: uppercase;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--white);
}

.c0 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  background-color: transparent;
}

.c0:hover {
  cursor: pointer;
}

.c0 .c1::after {
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  content: '';
  display: block;
  position: absolute;
  height: 1px;
  width: 100%;
  max-width: 0%;
  right: 0;
  left: auto;
  background-color: currentColor;
}

.c0:hover .c1::after,
.c0:focus .c1::after {
  max-width: 100%;
  top: 100%;
  left: 0;
  right: auto;
}

@media (min-width:600px) {

}

<div>
  <a
    class="c0"
    href="/#"
  >
    <span
      class="c1 c2"
    >
      test
    </span>
  </a>
</div>
`;

exports[`secondary button and link snapshot 2`] = `
<div>
  .c2 {
  line-height: 1.2;
  font-size: 2rem;
  text-transform: uppercase;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--red);
}

.c3 .c1::after {
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  content: '';
  display: block;
  position: absolute;
  height: 1px;
  width: 100%;
  max-width: 0%;
  right: 0;
  left: auto;
  background-color: currentColor;
}

.c3:hover .c1::after,
.c3:focus .c1::after {
  max-width: 100%;
  top: 100%;
  left: 0;
  right: auto;
}

.c0 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  background-color: transparent;
}

.c0:hover {
  cursor: pointer;
}

.c0 .c1::after {
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  content: '';
  display: block;
  position: absolute;
  height: 1px;
  width: 100%;
  max-width: 0%;
  right: 0;
  left: auto;
  background-color: currentColor;
}

.c0:hover .c1::after,
.c0:focus .c1::after {
  max-width: 100%;
  top: 100%;
  left: 0;
  right: auto;
}

@media (min-width:600px) {

}

@media (min-width:600px) {

}

<button
    class="c0"
    type="button"
  >
    <span
      class="c1 c2"
    >
      test 2
    </span>
  </button>
</div>
`;
